--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    background-image: url("https://unblast.com/wp-content/uploads/2021/01/Space-Background-Image-6.jpg");
+    background-position: center top;
+    background-size: 100% auto;
+}
