top nav bar added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<h1 style="color: white;">Diego Rodriguez-Krumdieck</h1>
-
-<nav>
-  <a class="button" routerLink="/home" routerLinkActive="activebutton" ariaCurrentWhenActive="page">Home</a>
-  <a class="button" routerLink="/about" routerLinkActive="activebutton" ariaCurrentWhenActive="page">About</a>
-</nav>
+<app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
