full page scrolling with hidden scroll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
 <app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
+<div class="container-sections">
+    <div class="section">
+        <app-home></app-home>
+    </div>
+    <div class="section">
+        <app-about></app-about>
+    </div>
+    <div class="section">
+        <app-projects></app-projects>
+    </div>
+    <div class="section">
+        <app-contact></app-contact>
+    </div>
+</div>
