--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,24 @@
     font-family: 'Courier New', sans-serif !important; 
 }
 
+.container-sections {
+    position: relative;
+    width: 100%;
+    height: 90vh;
+    scroll-behavior: smooth;
+    overflow: auto;
+    scroll-snap-type: y mandatory;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+} 
+
+.container-sections::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
+
+.section {
+    width: 100%;
+    height: 100%;
+    background-size:  cover;
+    scroll-snap-align: start;
+}
