--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,124 @@
-<p style="color: white;">contact works!</p>
+<p style="color: green; font-weight: bold;">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum ut tellus non rhoncus. Praesent at
+    volutpat turpis. Morbi scelerisque dictum felis, ut sagittis urna feugiat ut. Maecenas non dapibus neque, vel
+    accumsan lacus. Donec arcu sapien, vestibulum vel porta ut, volutpat et nisi. Integer tristique erat quis neque
+    malesuada, sit amet pretium tortor imperdiet. Etiam id rutrum metus, sed luctus elit. Class aptent taciti sociosqu
+    ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque porta lorem non purus ullamcorper
+    tincidunt. Fusce volutpat elit id risus auctor, non tempus augue finibus. Donec venenatis molestie metus quis
+    euismod. Donec vel diam lacus. Etiam aliquet sollicitudin elit vel consectetur. Integer et justo tincidunt, congue
+    nisl eget, tincidunt felis. Nullam posuere tellus sit amet ex venenatis, quis mattis ligula semper.
+
+    Nunc vel ultrices dolor. Integer tristique diam vitae ligula placerat, et aliquam ex tristique. Suspendisse non
+    nulla tortor. Maecenas imperdiet augue eget metus maximus lacinia. Vivamus eu dui ac augue consequat fringilla.
+    Pellentesque vulputate neque nec ligula ultricies tincidunt. Nulla vestibulum ornare dolor, eu efficitur sem sodales
+    et. Aenean condimentum metus augue, eget vehicula ligula finibus at.
+
+    Sed id feugiat ex. Proin dignissim est sit amet nulla placerat, non tincidunt sem aliquam. Pellentesque at cursus
+    risus. Donec sed porta lacus. Duis nec risus semper nisl consequat bibendum nec ut sem. Nullam sagittis urna at quam
+    consectetur placerat. Curabitur ultrices tempor tempor. Mauris auctor mattis lorem, non viverra ex vestibulum eu.
+    Integer non egestas mi.
+
+    Curabitur vitae lectus eget mauris euismod dapibus. Praesent tincidunt mauris sed odio condimentum sodales. Maecenas
+    nec tincidunt leo. Morbi ullamcorper risus sed molestie bibendum. Integer fermentum tortor id tincidunt lacinia.
+    Morbi non dui odio. Etiam iaculis sapien sed justo ullamcorper molestie. Integer aliquet ligula in arcu tristique
+    tincidunt. Quisque at erat quis nunc sodales venenatis. Suspendisse potenti. Ut gravida arcu cursus mi scelerisque
+    vulputate. Maecenas id mauris facilisis, maximus nisl nec, tincidunt magna.
+
+    Nam molestie eros quis nisl molestie, quis dapibus elit bibendum. Sed eget leo consequat, volutpat justo in, lacinia
+    sem. Suspendisse facilisis urna sem, quis interdum nisi vehicula et. Nulla efficitur odio commodo erat dapibus
+    mollis in id dui. Ut fermentum est at porta pharetra. Integer nec euismod lacus. Aenean nec magna a arcu vulputate
+    rhoncus ut a elit. Suspendisse ac accumsan turpis. Phasellus scelerisque lacus et sem auctor feugiat. Sed blandit
+    gravida lacus, sit amet scelerisque massa accumsan non. Nam enim sem, pharetra nec ligula nec, suscipit lacinia
+    nunc.
+
+    Donec magna sem, venenatis eu porttitor at, aliquam bibendum libero. Vestibulum ante ipsum primis in faucibus orci
+    luctus et ultrices posuere cubilia curae; Nulla iaculis, felis id cursus porttitor, purus nisi feugiat ante, ac
+    aliquet nulla odio quis lectus. Duis quis commodo diam. Nulla posuere neque a laoreet tempus. Mauris ornare ultrices
+    sapien, sit amet sollicitudin elit lobortis in. Curabitur vehicula lacus ullamcorper dui convallis, ut pellentesque
+    diam tempus. Sed facilisis purus id velit suscipit, eu efficitur orci rutrum.
+
+    Nam id elit accumsan, ultrices orci quis, dignissim lorem. Donec venenatis rhoncus nulla a cursus. Donec ornare at
+    dolor ac eleifend. Cras fermentum nunc eget augue accumsan aliquet. Morbi in enim id lorem vehicula sagittis sit
+    amet ornare urna. Fusce nulla mi, molestie ut venenatis vel, lobortis eget justo. Suspendisse sodales orci sed nisl
+    mattis, non blandit orci accumsan. Maecenas eu dapibus lorem. Morbi ac ligula id libero semper mattis. Ut malesuada
+    orci augue, et faucibus lectus sagittis quis. Nam condimentum est sit amet est fermentum ultricies. Vestibulum
+    imperdiet massa ipsum, sit amet iaculis odio mollis id.
+
+    Ut dignissim porttitor sapien, quis auctor ex euismod sit amet. Nullam commodo est ex, id condimentum nunc tempor
+    eu. Nam sed fermentum nibh. Etiam mattis aliquet laoreet. Maecenas in ante faucibus, hendrerit lorem vel, fermentum
+    neque. Etiam porttitor arcu dui, vel interdum justo condimentum lacinia. Nam at volutpat lacus, non condimentum
+    neque. Aliquam molestie risus quam. Suspendisse vehicula, libero quis faucibus tincidunt, purus ante aliquam ligula,
+    at bibendum quam mauris in turpis. Sed ut nibh malesuada, venenatis odio vulputate, consectetur mauris. Nam ac magna
+    nunc.
+
+    Morbi vitae ultricies ligula, quis facilisis eros. Pellentesque rhoncus feugiat nisi, ut tempor est ullamcorper at.
+    Donec venenatis felis vitae nisl suscipit, nec tincidunt tellus fringilla. Ut molestie, dui at commodo tempus, purus
+    metus dictum eros, sit amet gravida nunc quam quis diam. Phasellus venenatis, sapien ut accumsan sagittis, velit
+    nisi sodales odio, luctus laoreet sem erat ut urna. Aenean volutpat nulla eu felis dictum posuere. Maecenas
+    fermentum magna vel lobortis ornare. Nunc tempus vulputate ornare. Cras iaculis dignissim nisl sed hendrerit. In id
+    malesuada neque.
+
+    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut vel augue non ligula
+    dignissim volutpat. Nulla pharetra suscipit tortor non suscipit. Nunc euismod lobortis ipsum, eget tincidunt eros
+    cursus sed. Aliquam imperdiet varius urna, nec aliquet arcu ullamcorper eu. Nunc lobortis lacus lectus, non bibendum
+    enim tempus at. Suspendisse id luctus tellus. Morbi non nibh ac est tempus varius ut at lacus. Fusce et urna vitae
+    quam maximus sagittis. In sollicitudin quis risus id consequat. Praesent maximus velit et mauris aliquet bibendum.
+    Praesent vitae mi ut velit imperdiet aliquam sed ut neque. Nullam venenatis pellentesque cursus.
+
+    Morbi ullamcorper quam quis eros pulvinar, sed dignissim nisl suscipit. Maecenas porttitor urna ipsum, gravida
+    eleifend purus tincidunt eget. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+    egestas. Aenean ut urna iaculis, consectetur tellus a, rutrum tellus. Proin laoreet, quam at convallis volutpat,
+    tortor dui porta mauris, ut molestie erat mauris nec ligula. Proin pharetra orci vitae eros interdum, id sagittis
+    nisi sodales. Donec purus nisl, consequat non nisl at, mollis imperdiet nulla. Morbi ornare aliquet venenatis.
+    Curabitur vitae nibh maximus, porttitor enim nec, bibendum dolor. Nulla facilisi. Aenean placerat tellus id justo
+    convallis, quis tristique tellus ullamcorper. Aenean ultricies, enim et fringilla aliquam, purus ante efficitur
+    nibh, at cursus sem quam sit amet diam. Nunc luctus commodo faucibus. Donec porttitor purus vel interdum convallis.
+    Nulla eget suscipit erat, et pharetra sapien. Donec at pellentesque justo.
+
+    Nulla convallis eros sem, tincidunt mattis nisi facilisis et. Cras vitae urna orci. Sed eget justo mattis, porttitor
+    turpis id, porta arcu. Aliquam convallis nibh erat, nec condimentum tortor euismod quis. Donec justo turpis,
+    interdum id efficitur et, cursus sit amet augue. Aenean ultricies luctus nisi efficitur ornare. Nunc in urna quam.
+    Aliquam in dapibus mi. Donec facilisis purus eu congue consectetur. Etiam consectetur massa ac justo laoreet
+    fringilla.
+
+    Sed ac leo eget justo facilisis sodales. Donec sit amet sapien vitae leo accumsan mollis sed quis nisl. Ut viverra
+    vel nisl id porta. Donec et quam felis. Aenean in sem sodales, sollicitudin leo ac, euismod nisl. Nulla eleifend ex
+    vitae sapien blandit, at tincidunt mi volutpat. Etiam quis ligula scelerisque, faucibus ligula in, vulputate lorem.
+    Donec eros justo, congue quis euismod sed, posuere non enim.
+
+    Etiam ut pellentesque neque. Vestibulum accumsan felis eget urna sagittis, nec varius est lobortis. Nulla tristique
+    vestibulum tincidunt. Nulla tincidunt semper turpis, sed pulvinar eros facilisis eu. Nulla lacinia, magna eget
+    gravida vestibulum, erat arcu condimentum libero, id convallis enim arcu ut enim. Pellentesque tempor eleifend augue
+    ac sollicitudin. Aenean ut dolor finibus diam facilisis interdum. Aliquam vehicula pharetra porta. Sed vel viverra
+    diam, non molestie diam. Donec et ullamcorper quam. Cras pulvinar felis quis neque cursus, a vulputate velit
+    malesuada. Suspendisse bibendum magna sed leo mollis, nec pulvinar ligula gravida. Vestibulum blandit mattis ipsum
+    eu consequat. Curabitur at orci libero.
+
+    Phasellus ac ante mattis, feugiat sem eu, malesuada purus. Integer dapibus nisi non lacus pretium, ut ultricies sem
+    sagittis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque vitae
+    sapien non ante mattis fermentum id a massa. Integer diam augue, dapibus varius turpis sit amet, bibendum rhoncus
+    elit. Curabitur euismod viverra gravida. Vestibulum ligula velit, consectetur id congue in, tempus non turpis. In
+    dolor magna, dictum ac massa in, ullamcorper imperdiet ipsum. Duis sagittis aliquet lacus ut hendrerit.
+
+    Curabitur fermentum sem est, at eleifend est tempus sit amet. Vestibulum commodo diam purus, sit amet vehicula risus
+    laoreet quis. Fusce ultricies sagittis elementum. Etiam ullamcorper, velit ac tincidunt dictum, enim purus mattis
+    purus, volutpat elementum dui neque eu orci. In nec tempor ante. Phasellus vel nisi et eros bibendum pellentesque
+    sed vel lorem. Duis fermentum rutrum risus ac rhoncus. Suspendisse finibus efficitur lacus, et gravida nisi placerat
+    varius venenatis ultrices.
+
+    Praesent in sagittis arcu, eget pretium massa. Ut felis lorem, accumsan ut fringilla sed, euismod ut risus. Nulla in
+    egestas est. Morbi et erat sit amet lectus efficitur placerat. Phasellus quis accumsan arcu. In hac habitasse platea
+    dictumst. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean at
+    metus faucibus, pulvinar velit at, scelerisque ex. Sed et pretium purus, vitae sodales nulla.
+
+    Quisque interdum est pretium libero ultricies, eu sodales mauris efficitur. Fusce gravida velit vel nisl pharetra
+    posuere. Integer malesuada auctor urna ut elementum. Pellentesque imperdiet mi vel tellus molestie, vel pretium
+
+
+    Morbi at massa orci. Curabitur nec mauris auctor, pulvinar massa quis, fringilla lacus. Morbi viverra pulvinar
+    lacinia. Nulla egestas tortor ac est lobortis finibus. Sed varius urna vitae lacinia malesuada. Donec leo metus,
+    ultrices non finibus quis, sagittis non tellus. Phasellus placerat, felis sed porta faucibus, sem sem auctor lorem,
+    vitae hendrerit dui ligula non orci. Aliquam et metus in lorem posuere tincidunt egestas eu ante. Vivamus sed nibh
+    et erat pharetra pellentesque in vitae quam.
+
+</p>
