--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -23,3 +23,35 @@
     background-size:  cover;
     scroll-snap-align: start;
 }
+
+.button {
+    display: inline-block;
+    cursor: pointer;
+    font-size: 2em;
+    padding: 6px 24px;
+    text-decoration: none;
+    outline: 0;
+    color: white;
+}
+
+.activebutton {
+    font-weight: bold;
+    border-bottom: white 0.1em solid;
+}
+
+.nav-bar {
+    display: inline-block;
+    width: 100%;
+    position: relative;
+}
+
+.title { 
+    -webkit-text-stroke: 1.5px black; 
+    font-weight: bold;
+    color: white; float: inline-start; margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    font-size: 2.5em;
+}
